--- a/ComputeCanada_scrips/Examples of LTL to Omega-Automata Translation.ipynb
+++ b/ComputeCanada_scrips/Examples of LTL to Omega-Automata Translation.ipynb
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "99202338b96e74e315910b3b20b9a2b0621872c4f26ff012cceee1c9c29d9125"
+   }
   }
  },
  "nbformat": 4,
