added office world

--- a/ComputeCanada_scrips/Nursery Scenario.ipynb
+++ b/ComputeCanada_scrips/Nursery Scenario.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Omega-automaton states (including the trap state): 58\n"
+      "Number of Omega-automaton states (including the trap state): 55\n"
      ]
     },
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -128,10 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "((1, 58, 5, 4, 62), (5, 4, 58), 0.01)"
+       "((1, 55, 5, 4, 59), (5, 4, 55), 0.01)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,36 +142,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_4\"\n",
+      "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      " input_5 (InputLayer)           [(None, 5, 4, 58)]   0           []                               \n",
+      " input_1 (InputLayer)           [(None, 5, 4, 55)]   0           []                               \n",
       "                                                                                                  \n",
-      " conv2d_8 (Conv2D)              (None, 5, 4, 32)     7456        ['input_5[0][0]']                \n",
+      " conv2d (Conv2D)                (None, 5, 4, 32)     7072        ['input_1[0][0]']                \n",
       "                                                                                                  \n",
-      " conv2d_9 (Conv2D)              (None, 5, 4, 8)      1032        ['conv2d_8[0][0]']               \n",
+      " conv2d_1 (Conv2D)              (None, 5, 4, 8)      1032        ['conv2d[0][0]']                 \n",
       "                                                                                                  \n",
-      " flatten_4 (Flatten)            (None, 160)          0           ['conv2d_9[0][0]']               \n",
+      " flatten (Flatten)              (None, 160)          0           ['conv2d_1[0][0]']               \n",
       "                                                                                                  \n",
-      " dense_16 (Dense)               (None, 32)           5152        ['flatten_4[0][0]']              \n",
+      " dense (Dense)                  (None, 32)           5152        ['flatten[0][0]']                \n",
       "                                                                                                  \n",
-      " dense_17 (Dense)               (None, 16)           528         ['dense_16[0][0]']               \n",
+      " dense_1 (Dense)                (None, 16)           528         ['dense[0][0]']                  \n",
       "                                                                                                  \n",
-      " dense_18 (Dense)               (None, 62)           1054        ['dense_17[0][0]']               \n",
+      " dense_2 (Dense)                (None, 59)           1003        ['dense_1[0][0]']                \n",
       "                                                                                                  \n",
-      " dense_19 (Dense)               (None, 1)            17          ['dense_17[0][0]']               \n",
+      " dense_3 (Dense)                (None, 1)            17          ['dense_1[0][0]']                \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
-      "Total params: 15,239\n",
-      "Trainable params: 15,239\n",
+      "Total params: 14,804\n",
+      "Trainable params: 14,804\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -180,6 +180,24 @@
    "source": [
     "model = build_model(csrl.ch_states[(0,0,0,0)].shape, csrl.shape[-1])\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.utils.vis_utils import plot_model\n",
+    "plot_model(model, to_file='model_plot.pdf', show_shapes=True, show_layer_names=True)"
    ]
   },
   {
