--- a/Main/Nursery.ipynb
+++ b/Main/Nursery.ipynb
@@ -582,7 +582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q = np.load(f'Q2_{p}.npy')"
+    "Q = np.load(f'outputs/CSRL/Q2_{p}.npy')"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "outputs": [],
    "source": [
     "Q, visited_states =csrl.q_learning(T=100,K=100000, start=(4,1))\n",
-    "np.save(f'Q2_{p}.npy', Q)\n",
+    "np.save(f'outputs/CSRL/Q2_{p}', Q)\n",
     "\n",
     "# encode_visited_states = [i[1]*csrl.shape[-2]*csrl.shape[-3]+i[2]*csrl.shape[-2]+i[3] for i in visited_states]"
    ]
