before multi setup

--- a/Main/sequential_delivery.ipynb
+++ b/Main/sequential_delivery.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-06 21:44:04.911221: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2024-03-06 22:04:16.820020: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -42,198 +42,16 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "(5, 5, 6)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gw = grid_world(name='sequential_delivery', n_danger=3, plot=False, p=1)\n",
-    "gw.ch_states[(0,0,0,0)].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Omega-automaton states (including the trap state): 6\n",
-      "##########################\n",
-      "C: 0.5 | tow: 0.2\n",
-      "0 ) MCTS conf: -0.19 , det: 0.93 | s: 23 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('b',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)]\n",
-      "1 ) MCTS conf: 0.69 , det: 0.93 | s: 3 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 0 / 500 = 0.0\n",
-      "2 ) MCTS conf: 0.57 , det: 0.98 | s: 10 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 239 / 500 = 0.478\n",
-      "3 ) MCTS conf: 0.93 , det: 1.0 | s: 19 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 280 / 500 = 0.56\n",
-      "4 ) MCTS conf: 0.98 , det: 0.96 | s: 24 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 296 / 500 = 0.592\n",
-      "5 ) MCTS conf: 0.94 , det: 0.97 | s: 4 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 386 / 500 = 0.772\n",
-      "6 ) MCTS conf: 1.0 , det: 0.99 | s: 11 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 426 / 500 = 0.852\n",
-      "7 ) MCTS conf: 0.61 , det: 0.52 | s: 23 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('b',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',) ('c',)\n",
-      " ('c',) ('c',) ('c',) ('c',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 443 / 500 = 0.886\n",
-      "8 ) MCTS conf: 0.97 , det: 0.98 | s: 13 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 479 / 500 = 0.958\n",
-      "9 ) MCTS conf: 0.95 , det: 0.96 | s: 23 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 500 / 500 = 1.0\n",
-      "Train wins: 8 / 9\n",
-      "0 ) MCTS conf: 0.99 , det: 1.0 | s: 7 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Test wins: 1 / 1\n",
-      "Running 1000 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 1000 / 1000 = 1.0\n",
-      "Number of Omega-automaton states (including the trap state): 6\n",
-      "##########################\n",
-      "C: 0.5 | tow: 0.2\n",
-      "0 ) MCTS conf: -0.15 , det: 1.0 | s: 18 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('b',)]\n",
-      "1 ) MCTS conf: -0.39 , det: 0.99 | s: 7 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',)]\n",
-      "2 ) MCTS conf: 0.48 , det: 0.99 | s: 11 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 0 / 500 = 0.0\n",
-      "3 ) MCTS conf: 0.96 , det: 1.0 | s: 18 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 0 / 500 = 0.0\n",
-      "4 ) MCTS conf: 0.97 , det: 1.0 | s: 1 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 300 / 500 = 0.6\n",
-      "5 ) MCTS conf: 0.83 , det: 0.99 | s: 19 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 464 / 500 = 0.928\n",
-      "6 ) MCTS conf: 0.97 , det: 0.99 | s: 13 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 500 / 500 = 1.0\n",
-      "Train wins: 5 / 6\n",
-      "0 ) MCTS conf: 0.96 , det: 1.0 | s: 0 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('b',) ('c',)]\n",
-      "Test wins: 1 / 1\n",
-      "Running 1000 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 1000 / 1000 = 1.0\n",
-      "Number of Omega-automaton states (including the trap state): 6\n",
-      "##########################\n",
-      "C: 0.5 | tow: 0.2\n",
-      "0 ) MCTS conf: -0.1 , det: 0.98 | s: 9 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 298 / 500 = 0.596\n",
-      "1 ) MCTS conf: 0.2 , det: 0.98 | s: 0 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 407 / 500 = 0.814\n",
-      "2 ) MCTS conf: 0.98 , det: 0.95 | s: 1 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 448 / 500 = 0.896\n",
-      "3 ) MCTS conf: 0.79 , det: 0.99 | s: 23 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 500 / 500 = 1.0\n",
-      "Train wins: 4 / 3\n",
-      "0 ) MCTS conf: 0.99 , det: 1.0 | s: 23 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
-      "Test wins: 1 / 1\n",
-      "Running 1000 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 1000 / 1000 = 1.0\n",
-      "Number of Omega-automaton states (including the trap state): 6\n",
-      "##########################\n",
-      "C: 0.5 | tow: 0.2\n",
-      "0 ) MCTS conf: -0.1 , det: 0.98 | s: 14 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 205 / 500 = 0.41\n",
-      "1 ) MCTS conf: 0.88 , det: 0.98 | s: 0 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 275 / 500 = 0.55\n",
-      "2 ) MCTS conf: 0.56 , det: 0.99 | s: 11 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 381 / 500 = 0.762\n",
-      "3 ) MCTS conf: 0.94 , det: 0.98 | s: 4 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 428 / 500 = 0.856\n",
-      "4 ) MCTS conf: 0.97 , det: 0.98 | s: 9 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 480 / 500 = 0.96\n",
-      "5 ) MCTS conf: -0.46 , det: 0.4 | s: 23 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('b',) ('d',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 412 / 500 = 0.824\n",
-      "6 ) MCTS conf: 0.45 , det: 0.95 | s: 24 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 471 / 500 = 0.942\n",
-      "7 ) MCTS conf: 0.54 , det: 0.9 | s: 23 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 500 / 500 = 1.0\n",
-      "Train wins: 7 / 7\n",
-      "0 ) MCTS conf: 1.0 , det: 1.0 | s: 7 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('c',)]\n",
-      "Test wins: 1 / 1\n",
-      "Running 1000 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 1000 / 1000 = 1.0\n",
-      "Number of Omega-automaton states (including the trap state): 6\n",
-      "##########################\n",
-      "C: 0.5 | tow: 0.2\n",
-      "0 ) MCTS conf: -0.18 , det: 0.97 | s: 24 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('a',) ('b',) ('a',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 252 / 500 = 0.504\n",
-      "1 ) MCTS conf: 1.0 , det: 1.0 | s: 13 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('a',) ('c',)]\n",
-      "Running 500 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 500 / 500 = 1.0\n",
-      "Train wins: 2 / 1\n",
-      "0 ) MCTS conf: 1.0 , det: 1.0 | s: 1 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('a',) ('a',) ('c',)]\n",
-      "Test wins: 1 / 1\n",
-      "Running 1000 simulations with 50 time-steps...\n",
-      "Test finished with:\n",
-      "\tsuccess rate: 1000 / 1000 = 1.0\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'reward'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m7\u001b[39m):\n\u001b[0;32m----> 2\u001b[0m     gw \u001b[38;5;241m=\u001b[39m \u001b[43mgrid_world\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msequential_delivery\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_danger\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplot\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m     model \u001b[38;5;241m=\u001b[39m build_model(gw\u001b[38;5;241m.\u001b[39mch_states[(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)]\u001b[38;5;241m.\u001b[39mshape, gw\u001b[38;5;241m.\u001b[39mcsrl\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m      4\u001b[0m     model\u001b[38;5;241m.\u001b[39mload_weights(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutputs/models/sequential_delivery_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_p\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgw\u001b[38;5;241m.\u001b[39mp\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Research/Uwaterloo/RL-LTL/Main/dependencies/maps.py:21\u001b[0m, in \u001b[0;36mgrid_world.__init__\u001b[0;34m(self, name, p, plot, n_danger, shape, csrl)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplot: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmdp\u001b[38;5;241m.\u001b[39mplot()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mltl \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_ltl(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[0;32m---> 21\u001b[0m csrl \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmdp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mltl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplot\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_ltl_f()\n",
+      "File \u001b[0;32m~/Research/Uwaterloo/RL-LTL/Main/dependencies/maps.py:34\u001b[0m, in \u001b[0;36mgrid_world.build\u001b[0;34m(self, grid_mdp, ltl, plot)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Construct the product MDP\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcsrl \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcsrl \u001b[38;5;241m=\u001b[39m ControlSynthesis(grid_mdp,oa)\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_rew \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcsrl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreward\u001b[49m\u001b[38;5;241m.\u001b[39mmax(), \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39ms_vectors \u001b[38;5;241m=\u001b[39m state_vectors(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcsrl)\n\u001b[1;32m     37\u001b[0m enc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(np\u001b[38;5;241m.\u001b[39munique(grid_mdp\u001b[38;5;241m.\u001b[39mlabel))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'reward'"
      ]
     }
    ],
