--- a/Main/Scratch.ipynb
+++ b/Main/Scratch.ipynb
@@ -31,11 +31,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Omega-automaton states (including the trap state): 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "gw = grid_world(name='random', shape=(10, 10), plot=False, p=1)\n",
+    "csrl = gw.csrl\n",
+    "model = build_model(gw.ch_states[(0,0,0,0)].shape, gw.csrl.shape[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval(model, n_gw_test=2)"
+    "model.load_weights(f'outputs/models/gen_mdp/random_p{gw.p}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Omega-automaton states (including the trap state): 6\n",
+      "##########################\n",
+      "C: 0.5 | tow: 0.2\n",
+      "0 ) MCTS conf: -0.15 , det: 0.99 | s: 10 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 209 / 500 = 0.418\n",
+      "1 ) MCTS conf: -0.31 , det: 1.0 | s: 52 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 180 / 500 = 0.36\n",
+      "2 ) MCTS conf: 1.0 , det: 1.0 | s: 82 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 225 / 500 = 0.45\n",
+      "3 ) MCTS conf: 0.95 , det: 0.98 | s: 97 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 278 / 500 = 0.556\n",
+      "4 ) MCTS conf: 1.0 , det: 1.0 | s: 71 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 303 / 500 = 0.606\n",
+      "5 ) MCTS conf: -0.5 , det: 0.95 | s: 68 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('d',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 302 / 500 = 0.604\n",
+      "6 ) MCTS conf: 0.16 , det: 0.52 | s: 58 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('a',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 304 / 500 = 0.608\n",
+      "7 ) MCTS conf: -0.11 , det: 0.93 | s: 66 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 325 / 500 = 0.65\n",
+      "8 ) MCTS conf: 0.95 , det: 0.99 | s: 5 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 344 / 500 = 0.688\n",
+      "9 ) MCTS conf: -0.46 , det: 0.57 | s: 19 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('c',) ('d',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 342 / 500 = 0.684\n",
+      "Train wins: 5 / 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(30):\n",
+    "    gw = grid_world(name='random', shape=(10,10), plot=False, p=1)\n",
+    "    env = RL_LTL(gw, model)\n",
+    "    env.train(10, smart_start=True)\n",
+    "\n",
+    "    with open(f'outputs/Ours/gen_mdp/random_p{gw.p}.txt', 'w') as f:\n",
+    "        f.write('succ_rate:\\n')\n",
+    "        f.write(', '.join(str(i) for i in env.policy_succ_rate))\n",
+    "\n",
+    "    model.save_weights(f'outputs/models/gen_mdp/random_p{gw.p}')\n",
+    "    # np.save(f'outputs/Ours/random_p{gw.p}', env.policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##########################\n",
+      "C: 0.5 | tow: 0.2\n",
+      "0 ) MCTS conf: -0.05 , det: 0.97 | s: 99 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 85 / 500 = 0.17\n",
+      "1 ) MCTS conf: -0.07 , det: 0.98 | s: 91 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 77 / 500 = 0.154\n",
+      "2 ) MCTS conf: -0.5 , det: 1.0 | s: 11 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 94 / 500 = 0.188\n",
+      "3 ) MCTS conf: 0.65 , det: 1.0 | s: 56 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 121 / 500 = 0.242\n",
+      "4 ) MCTS conf: -0.47 , det: 1.0 | s: 17 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 122 / 500 = 0.244\n",
+      "5 ) MCTS conf: -0.5 , det: 1.0 | s: 70 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('d',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 136 / 500 = 0.272\n",
+      "6 ) MCTS conf: 0.97 , det: 1.0 | s: 45 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 162 / 500 = 0.324\n",
+      "7 ) MCTS conf: -0.37 , det: 1.0 | s: 84 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 158 / 500 = 0.316\n",
+      "8 ) MCTS conf: 0.56 , det: 0.96 | s: 52 LTL_f [+++]  LDBA [ 0.0 ] observed labels: [('a',) ('b',) ('c',)]\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 204 / 500 = 0.408\n",
+      "9 ) MCTS conf: -0.5 , det: 1.0 | s: 11 LTL_f [---]  LDBA [ 0.0 ] observed labels: []\n",
+      "Running 500 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 206 / 500 = 0.412\n",
+      "Train wins: 4 / 9\n",
+      "0 ) MCTS conf: 0.92 , det: 1.0 | s: 30 LTL_f [---]  LDBA [ 0.0 ] observed labels: [('d',)]\n",
+      "Test wins: 0 / 1\n",
+      "Running 1000 simulations with 50 time-steps...\n",
+      "Test finished with:\n",
+      "\tsuccess rate: 369 / 1000 = 0.369\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(-0.13363636363636366, -0.33199999999999996)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(model, n_gw_test=1)"
    ]
   },
   {
