--- a/Main/safe_absorbing.ipynb
+++ b/Main/safe_absorbing.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-13 17:15:55.897584: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2024-04-16 13:55:19.910140: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -62,6 +62,157 @@
    ],
    "source": [
     "gw = grid_world(name='safe_absorbing', plot=True, p=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(): [None], ('a',): [None], ('b',): [None], ('d',): [None], ('a', 'b'): [None], ('a', 'd'): [None], ('b', 'd'): [None], ('a', 'b', 'd'): [None]}\n",
+      "{(): [None], ('a',): [None], ('b',): [True], ('d',): [None], ('a', 'b'): [True], ('a', 'd'): [None], ('b', 'd'): [None], ('a', 'b', 'd'): [None]}\n",
+      "{(): [None], ('a',): [True], ('b',): [None], ('d',): [None], ('a', 'b'): [True], ('a', 'd'): [None], ('b', 'd'): [None], ('a', 'b', 'd'): [None]}\n",
+      "{(): [None], ('a',): [None], ('b',): [None], ('d',): [None], ('a', 'b'): [None], ('a', 'd'): [None], ('b', 'd'): [None], ('a', 'b', 'd'): [None]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in gw.csrl.oa.acc:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[([(0, 0, 0, 1), (0, 0, 0, 0)], [0.0, 1.0])\n",
+      "  ([(0, 0, 1, 0), (0, 0, 0, 1)], [1, 0.0])\n",
+      "  ([(0, 0, 1, 0), (0, 0, 0, 1)], [0.0, 1])\n",
+      "  ([(0, 0, 1, 0), (0, 0, 0, 0)], [0.0, 1.0]) None ([(0, 1, 0, 0)], [1.0])\n",
+      "  ([(0, 2, 0, 0)], [1.0]) None]\n",
+      " [([(0, 0, 0, 0), (0, 0, 0, 2), (0, 0, 0, 1)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 0, 1, 1), (0, 0, 0, 0), (0, 0, 0, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 1, 1), (0, 0, 0, 2)], [0.0, 1])\n",
+      "  ([(0, 0, 1, 1), (0, 0, 0, 0)], [0.0, 1]) None ([(0, 1, 0, 1)], [1.0])\n",
+      "  ([(0, 2, 0, 1)], [1.0]) None]\n",
+      " [([(0, 3, 0, 1), (0, 3, 0, 3), (0, 3, 0, 2)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 3, 1, 2), (0, 3, 0, 1), (0, 3, 0, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 3, 1, 2), (0, 3, 0, 3)], [0.0, 1])\n",
+      "  ([(0, 3, 1, 2), (0, 3, 0, 1)], [0.0, 1]) None ([(0, 1, 0, 2)], [1.0])\n",
+      "  ([(0, 2, 0, 2)], [1.0]) None]\n",
+      " [([(0, 0, 0, 2), (0, 0, 0, 3)], [0.0, 1.0])\n",
+      "  ([(0, 0, 1, 3), (0, 0, 0, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 1, 3), (0, 0, 0, 3)], [0.0, 1.0])\n",
+      "  ([(0, 0, 1, 3), (0, 0, 0, 2)], [0.0, 1]) None ([(0, 1, 0, 3)], [1.0])\n",
+      "  ([(0, 2, 0, 3)], [1.0]) None]]\n",
+      "[[([(0, 0, 0, 0), (0, 0, 1, 1)], [1, 0.0])\n",
+      "  ([(0, 0, 1, 1), (0, 0, 1, 0)], [0.0, 1.0])\n",
+      "  ([(0, 0, 0, 0), (0, 0, 1, 1)], [0.0, 1])\n",
+      "  ([(0, 0, 0, 0), (0, 0, 1, 0)], [0.0, 1.0]) None ([(0, 1, 1, 0)], [1.0])\n",
+      "  ([(0, 2, 1, 0)], [1.0]) None]\n",
+      " [([(0, 0, 0, 1), (0, 0, 1, 0), (0, 0, 1, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 2, 1), (0, 0, 1, 0), (0, 0, 1, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 2, 1), (0, 0, 0, 1), (0, 0, 1, 2)], [0.0, 0.0, 1])\n",
+      "  ([(0, 0, 2, 1), (0, 0, 0, 1), (0, 0, 1, 0)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 1, 1)], [1.0]) ([(0, 2, 1, 1)], [1.0]) None]\n",
+      " [([(0, 0, 0, 2), (0, 0, 1, 1), (0, 0, 1, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 2, 2), (0, 0, 1, 1), (0, 0, 1, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 2, 2), (0, 0, 0, 2), (0, 0, 1, 3)], [0.0, 0.0, 1])\n",
+      "  ([(0, 0, 2, 2), (0, 0, 0, 2), (0, 0, 1, 1)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 1, 2)], [1.0]) ([(0, 2, 1, 2)], [1.0]) None]\n",
+      " [([(0, 0, 1, 3)], array([1.])) ([(0, 0, 1, 3)], array([1.]))\n",
+      "  ([(0, 0, 1, 3)], array([1.])) ([(0, 0, 1, 3)], array([1.])) None\n",
+      "  ([(0, 1, 1, 3)], [1.0]) ([(0, 2, 1, 3)], [1.0]) None]]\n",
+      "[[([(0, 0, 2, 0)], array([1.])) ([(0, 0, 2, 0)], array([1.]))\n",
+      "  ([(0, 0, 2, 0)], array([1.])) ([(0, 0, 2, 0)], array([1.])) None\n",
+      "  ([(0, 1, 2, 0)], [1.0]) ([(0, 2, 2, 0)], [1.0]) None]\n",
+      " [([(0, 0, 1, 1), (0, 0, 2, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 3, 1), (0, 0, 2, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 3, 1), (0, 0, 1, 1), (0, 0, 2, 2)], [0.0, 0.0, 1])\n",
+      "  ([(0, 0, 3, 1), (0, 0, 1, 1), (0, 0, 2, 1)], [0.0, 0.0, 1.0]) None\n",
+      "  ([(0, 1, 2, 1)], [1.0]) ([(0, 2, 2, 1)], [1.0]) None]\n",
+      " [([(0, 3, 1, 2), (0, 3, 2, 1), (0, 3, 2, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 3, 3, 2), (0, 3, 2, 1), (0, 3, 2, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 3, 3, 2), (0, 3, 1, 2), (0, 3, 2, 3)], [0.0, 0.0, 1])\n",
+      "  ([(0, 3, 3, 2), (0, 3, 1, 2), (0, 3, 2, 1)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 2, 2)], [1.0]) ([(0, 2, 2, 2)], [1.0]) None]\n",
+      " [([(0, 0, 1, 3), (0, 0, 2, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 3, 3), (0, 0, 2, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 3, 3), (0, 0, 1, 3), (0, 0, 2, 3)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 0, 3, 3), (0, 0, 1, 3), (0, 0, 2, 2)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 2, 3)], [1.0]) ([(0, 2, 2, 3)], [1.0]) None]]\n",
+      "[[([(0, 0, 3, 0)], array([1.])) ([(0, 0, 3, 0)], array([1.]))\n",
+      "  ([(0, 0, 3, 0)], array([1.])) ([(0, 0, 3, 0)], array([1.])) None\n",
+      "  ([(0, 1, 3, 0)], [1.0]) ([(0, 2, 3, 0)], [1.0]) None]\n",
+      " [([(0, 0, 2, 1), (0, 0, 3, 0), (0, 0, 3, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 4, 1), (0, 0, 3, 0), (0, 0, 3, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 4, 1), (0, 0, 2, 1), (0, 0, 3, 2)], [0.0, 0.0, 1])\n",
+      "  ([(0, 0, 4, 1), (0, 0, 2, 1), (0, 0, 3, 0)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 3, 1)], [1.0]) ([(0, 2, 3, 1)], [1.0]) None]\n",
+      " [([(0, 0, 3, 2)], array([1.])) ([(0, 0, 3, 2)], array([1.]))\n",
+      "  ([(0, 0, 3, 2)], array([1.])) ([(0, 0, 3, 2)], array([1.])) None\n",
+      "  ([(0, 1, 3, 2)], [1.0]) ([(0, 2, 3, 2)], [1.0]) None]\n",
+      " [([(0, 0, 2, 3), (0, 0, 3, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 4, 3), (0, 0, 3, 2)], [1, 0.0])\n",
+      "  ([(0, 0, 4, 3), (0, 0, 2, 3), (0, 0, 3, 3)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 0, 4, 3), (0, 0, 2, 3), (0, 0, 3, 2)], [0.0, 0.0, 1]) None\n",
+      "  ([(0, 1, 3, 3)], [1.0]) ([(0, 2, 3, 3)], [1.0]) None]]\n",
+      "[[([(0, 0, 3, 0), (0, 0, 4, 1)], [1, 0.0])\n",
+      "  ([(0, 0, 4, 1), (0, 0, 4, 0)], [0.0, 1.0])\n",
+      "  ([(0, 0, 3, 0), (0, 0, 4, 1)], [0.0, 1])\n",
+      "  ([(0, 0, 3, 0), (0, 0, 4, 0)], [0.0, 1.0]) None ([(0, 1, 4, 0)], [1.0])\n",
+      "  ([(0, 2, 4, 0)], [1.0]) None]\n",
+      " [([(0, 3, 3, 1), (0, 3, 4, 0), (0, 3, 4, 2)], [1, 0.0, 0.0])\n",
+      "  ([(0, 3, 4, 0), (0, 3, 4, 2), (0, 3, 4, 1)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 3, 3, 1), (0, 3, 4, 2)], [0.0, 1])\n",
+      "  ([(0, 3, 3, 1), (0, 3, 4, 0)], [0.0, 1]) None ([(0, 1, 4, 1)], [1.0])\n",
+      "  ([(0, 2, 4, 1)], [1.0]) None]\n",
+      " [([(0, 0, 3, 2), (0, 0, 4, 1), (0, 0, 4, 3)], [1, 0.0, 0.0])\n",
+      "  ([(0, 0, 4, 1), (0, 0, 4, 3), (0, 0, 4, 2)], [0.0, 0.0, 1.0])\n",
+      "  ([(0, 0, 3, 2), (0, 0, 4, 3)], [0.0, 1])\n",
+      "  ([(0, 0, 3, 2), (0, 0, 4, 1)], [0.0, 1]) None ([(0, 1, 4, 2)], [1.0])\n",
+      "  ([(0, 2, 4, 2)], [1.0]) None]\n",
+      " [([(0, 3, 3, 3), (0, 3, 4, 2)], [1, 0.0])\n",
+      "  ([(0, 3, 4, 2), (0, 3, 4, 3)], [0.0, 1.0])\n",
+      "  ([(0, 3, 3, 3), (0, 3, 4, 3)], [0.0, 1.0])\n",
+      "  ([(0, 3, 3, 3), (0, 3, 4, 2)], [0.0, 1]) None ([(0, 1, 4, 3)], [1.0])\n",
+      "  ([(0, 2, 4, 3)], [1.0]) None]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in gw.csrl.transition_probs[(0,0)]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(): 0, ('a',): 0, ('b',): 0, ('d',): 3, ('a', 'b'): 0, ('a', 'd'): 3, ('b', 'd'): 3, ('a', 'b', 'd'): 3}\n",
+      "{(): 3, ('a',): 3, ('b',): 1, ('d',): 3, ('a', 'b'): 1, ('a', 'd'): 3, ('b', 'd'): 3, ('a', 'b', 'd'): 3}\n",
+      "{(): 3, ('a',): 2, ('b',): 3, ('d',): 3, ('a', 'b'): 2, ('a', 'd'): 3, ('b', 'd'): 3, ('a', 'b', 'd'): 3}\n",
+      "{(): 3, ('a',): 3, ('b',): 3, ('d',): 3, ('a', 'b'): 3, ('a', 'd'): 3, ('b', 'd'): 3, ('a', 'b', 'd'): 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in gw.csrl.oa.delta:\n",
+    "    print(i)"
    ]
   },
   {
